# simple-client-server

./: .gitignore  CMakeLists.txt  README.md  client.c
include/: client.h  encrypt.h  serialization.h  serialize.h  util.h
include/client/: client.h
include/server/: server.h
src/: client.c  encrypt.c  serialization.c  serialize.c  util.c
src/client/: client.c
src/server/: server.c
src/test/: serialize_test.c
